--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.18.2",
     "ejs": "~0.7.1",
-    "express": "~2.5.8",
+    "errorhandler": "^1.5.0",
+    "express": "^4.16.2",
+    "express-jade": "0.0.3",
+    "i": "^0.3.6",
+    "method-override": "^2.3.10",
+    "pug": "^2.0.0-rc.4",
     "socket.io": "~0.9.6",
     "underscore": "~1.3.3"
   },
